--- a/super-movie-searcher/src/Components/Header/Header.css
+++ b/super-movie-searcher/src/Components/Header/Header.css
@@ -2,5 +2,11 @@ header {
   width: 100%;
   height: 60px;
   background-color: #242627;
+  display: flex;
+  align-items: center;
+}
+
+.Header-link {
+  text-decoration: none;
   color: white;
 }
