Add reset scc better header start movie page(mobile first)

--- a/super-movie-searcher/src/Components/Header/Header.css
+++ b/super-movie-searcher/src/Components/Header/Header.css
@@ -11,9 +11,10 @@ header {
 .Header-link {
   text-decoration: none;
   color: white;
+  margin-left: 15px;
 }
 
 .Header-search {
   padding: 5px;
-  margin-right: 5px;
+  margin-right: 15px;
 }
