--- a/super-movie-searcher/src/Components/MoviePage/MoviePage.css
+++ b/super-movie-searcher/src/Components/MoviePage/MoviePage.css
@@ -62,6 +62,17 @@ h2 {
     width: 90%;
   }
 
+  .MoviePage-image > img {
+    width: 265px;
+    height: 400px;
+  }
+
+  .MoviePage-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
   h2 {
     font-size: 36px;
   }
