--- a/super-movie-searcher/src/Components/MovieCover/MovieCover.css
+++ b/super-movie-searcher/src/Components/MovieCover/MovieCover.css
@@ -1,5 +1,23 @@
 .MovieCover {
-  height: 300px;
-  width: 300px;
+  margin: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.MovieCover-img {
+  width: 175px;
+  height: 225px;
   background-color: tomato;
+}
+
+.MovieCover-title {
+  margin-top: 10px;
+}
+
+@media (min-width: 1050px) {
+  .MovieCover-img {
+    width: 215px;
+    height: 325px;
+  }
 }
