--- a/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
+++ b/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
@@ -1,4 +1,27 @@
 .MoviesPage-main {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.MoviesPage-banniere {
+  width: 100%;
+  height: 107px;
+  margin-bottom: 14px;
+}
+.MoviesPage-imgBanniere {
   background-color: blue;
+  width: 100%;
+  height: 107px;
+}
+
+.MoviesPage-affichage {
+  display: flex;
+  padding: 0 55px;
+}
+
+@media (min-width: 550px) {
+  .MoviesPage-main {
+    display: flex;
+  }
 }
