Add link, create constante, service and add data to the movie page

--- a/super-movie-searcher/src/Components/MoviePage/MoviePage.css
+++ b/super-movie-searcher/src/Components/MoviePage/MoviePage.css
@@ -97,6 +97,10 @@ h2 {
     font-size: 36px;
   }
 
+  .MoviePage-producerLogo {
+    width: 50px;
+  }
+
   .MoviePage-subtitle {
     font-size: 24px;
     margin-bottom: 24px;
