--- a/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
+++ b/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
@@ -20,6 +20,11 @@
   padding: 0 55px;
 }
 
+.MoviesPage-link {
+  color: white;
+  text-decoration: none;
+}
+
 @media (min-width: 550px) {
   .MoviesPage-main {
     display: flex;
