--- a/super-movie-searcher/src/Components/MoviesList/MoviesList.css
+++ b/super-movie-searcher/src/Components/MoviesList/MoviesList.css
@@ -10,4 +10,24 @@
 
 .MoviesList-title {
   margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+@media (min-width: 665px) {
+  .MoviesList {
+    margin-bottom: 74px;
+  }
+  .MoviesList-title {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+}
+@media (min-width: 900px) {
+  .MoviesList-title {
+    margin-bottom: 30px;
+
+    font-size: 24px;
+    font-weight: bold;
+  }
 }
