--- a/super-movie-searcher/src/Components/Dropdown/Dropdown.css
+++ b/super-movie-searcher/src/Components/Dropdown/Dropdown.css
@@ -1,3 +1,7 @@
 .Dropdown {
-  background-color: paleturquoise;
+  background-color: #252525;
+  border: 1px solid #303030;
+  border-radius: 5px;
+  position: absolute;
+  padding: 4px;
 }
