--- a/super-movie-searcher/src/Components/Header/Header.css
+++ b/super-movie-searcher/src/Components/Header/Header.css
@@ -1,38 +1,83 @@
 header {
-  width: 100%;
-  height: 70px;
   background-color: #242627;
-  display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
+  width: 100%;
+  display: flex;
+  height: 70px;
 }
-
+.Header-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 1366px;
+  justify-content: space-between;
+  padding: 0px 20px;
+}
 .Header-link {
-  font-size: 35px;
+  font-size: 25px;
   color: white;
-  margin-left: 15px;
   text-decoration: none;
 }
-
 .Header-search {
-  padding: 8px;
-  width: 400px;
+  background: url(../../assets/loop.svg) no-repeat 15px 11px;
+  padding: 8px 8px 8px 30px;
+  width: 200px;
   margin-right: 25px;
+  background-color: #252525;
+  border: 1px solid #fff;
+  box-sizing: border-box;
+  border-radius: 6px;
 }
-.Header-content{
-display: flex;
-align-items: center;
-width: 100%;
-max-width: 1366px;
-justify-content: space-between;
+.Header-sign {
+  display: none;
+}
+.Header-icon {
+  display: flex;
+  align-items: center;
+}
 
-}
-@media (min-width: 375px) {
+@media (min-width: 550px) {
   .Header-search {
-    padding: 10px;
-    width: 50%;
-    max-width: 500px;
-    margin-right: 55px;
+    width: 350px;
   }
+  .Header-link {
+    font-size: 35px;
+    text-decoration: none;
   }
+  .Header-content {
+    padding: 0px 40px;
+  }
+}
+@media (min-width: 900px) {
+  .Header-icon {
+    display: none;
+  }
+  .Header-search {
+    width: 500px;
+  }
+  .Header-link {
+    font-size: 45px;
+    text-decoration: none;
+  }
+
+  .Header-sign {
+    display: flex;
+    gap: 20px;
+  }
+  .Header-signin {
+    cursor: pointer;
+    color: #585858;
+    line-height: 24px;
+  }
+  .Header-signup {
+    width: 124px;
+    line-height: 24px;
+    text-align: center;
+    color: #fff;
+    background: #646464;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+}
