--- a/super-movie-searcher/src/Components/Footer/Footer.css
+++ b/super-movie-searcher/src/Components/Footer/Footer.css
@@ -1,13 +1,60 @@
 footer {
   width: 100%;
-  height: 50px;
-  background-color: #242627;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
 }
 
+.Logo-block {
+  font-size: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+.Footer-infos {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.Footer-information {
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.Footer-subinfo {
+  margin-top: 15px;
+  font-size: 8px;
+}
+.follow-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+@media (min-width: 650px) {
+  .Footer-infos {
+    justify-content: space-evenly;
+  }
+}
+
+/*
+.Footer-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 1366px;
+  justify-content: space-between;
+}
+
+.Logo-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .Footer-link {
   display: flex;
   font-size: 25px;
@@ -15,12 +62,21 @@ footer {
   margin-left: 15px;
   text-decoration: none;
 }
+
 .Footer-sublink {
   text-decoration: none;
   color: white;
   margin-left: 15px;
   font-size: 10px;
 }
+.Footer-infos {
+  display: flex;
+}
+.Information-block {
+  display: flex;
+  flex-direction: column;
+}
+
 .Footer-information {
   text-decoration: none;
   color: white;
@@ -34,17 +90,6 @@ footer {
   color: white;
 }
 
-.Footer-content {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 1366px;
-  justify-content: space-between;
-}
-.Information-block {
-  display: flex;
-  flex-direction: column;
-}
 .follow-block {
   align-items: center;
   width: 200px;
@@ -52,6 +97,7 @@ footer {
   flex-direction: column;
   font-weight: bold;
 }
+
 .logo {
   margin-top: 5px;
   height: 20px;
@@ -72,3 +118,4 @@ footer {
     margin-left: 10px;
   }
 }
+ */ ;
