--- a/super-movie-searcher/src/Components/Footer/Footer.css
+++ b/super-movie-searcher/src/Components/Footer/Footer.css
@@ -7,7 +7,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .Footer-infos {
   display: flex;
@@ -17,12 +17,12 @@ footer {
 
 .Footer-information {
   font-weight: bold;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .Footer-subinfo {
-  margin-top: 15px;
-  font-size: 8px;
+  margin-top: 10px;
+  font-size: 10px;
 }
 .follow-block {
   display: flex;
@@ -33,6 +33,8 @@ footer {
 .logo {
   margin-left: 10px;
   cursor: pointer;
+  height: 25px;
+  margin-bottom: 15px;
 }
 
 @media (min-width: 650px) {
@@ -40,7 +42,9 @@ footer {
     justify-content: space-evenly;
   }
 }
-
+.Footer-link {
+  font-size: 20px;
+}
 /*
 .Footer-content {
   display: flex;
