--- a/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
+++ b/super-movie-searcher/src/Components/MoviesPage/MoviesPage.css
@@ -14,6 +14,7 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  height: 200px;
 }
 .MoviesPage-title {
   font-size: 50px;
@@ -72,13 +73,13 @@ main {
   .MoviesPage-info {
     font-size: 36px;
   }
-}
-
-@media (min-width: 1200px) {
   .MoviesPage-banniere {
     background-image: url(../../assets/herodesktop.png);
     height: 461px;
   }
+}
+
+@media (min-width: 1200px) {
   .MoviesPage-title {
     font-size: 200px;
   }
