--- a/super-movie-searcher/src/Components/Movie/Movie.css
+++ b/super-movie-searcher/src/Components/Movie/Movie.css
@@ -35,6 +35,11 @@
   font-size: 8px;
 }
 
+.Movie-link {
+  color: white;
+  text-decoration: none;
+}
+
 @media (min-width: 550px) {
   .Movie-card {
     width: 125px;
