--- a/super-movie-searcher/src/Components/MovieCover/MovieCover.css
+++ b/super-movie-searcher/src/Components/MovieCover/MovieCover.css
@@ -8,11 +8,16 @@
 .MovieCover-img {
   width: 175px;
   height: 225px;
-  background-color: tomato;
 }
 
 .MovieCover-title {
   margin-top: 10px;
+  max-width: 178px;
+}
+
+.MovieCover-link {
+  color: white;
+  text-decoration: none;
 }
 
 @media (min-width: 1050px) {
