--- a/super-movie-searcher/src/Components/Movie/Movie.css
+++ b/super-movie-searcher/src/Components/Movie/Movie.css
@@ -6,10 +6,16 @@
   border-radius: 5px;
   width: 85px;
   height: 147px;
+  cursor: pointer;
   /*   margin: 10px 13px 10px 0;
  */
   overflow: hidden;
 }
+
+.Movie-card:hover {
+  transform: scale(1.2);
+}
+
 .Movie-card:last-child {
   display: none;
 }
@@ -26,7 +32,13 @@
 
 .Movie-infos {
   text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
+
 .Movie-rated {
   margin: 5px 0;
 }
