--- a/super-movie-searcher/src/index.css
+++ b/super-movie-searcher/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #353535;
+  background-color: #1f1f1f;
   color: white;
   display: flex;
   flex-direction: column;
